--- a/src/main.scss
+++ b/src/main.scss
@@ -17,7 +17,7 @@ body {
   h1 {
     font-family: 'source-code-pro', 'sans-serif';
     font-weight: 400;
-    color: #fff;
+    // color: #fff;
   }
 }
 
