--- a/src/main.scss
+++ b/src/main.scss
@@ -1,13 +1,16 @@
 body {
   background-color: #a1b2c3;
+  display: flex;
+  justify-content: center;
 }
 
-.profile {
+.profile #react-root div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  // height: 100vh;
+  width: 50vw;
 
   img {
     border-radius: 50%;
